# Wi-UAV_setup

./: CMakeLists.bak.txt  CMakeLists.txt  README.md  UserConfig.txt  UserConfigSample.txt  info-dump.txt  main.cpp.bak  radio.hpp.bak  run.sh
baseStation/: CMakeLists.txt
baseStation/include/: config.hpp  flightUtils.hpp  radio.hpp  switch.hpp  utils.hpp
baseStation/src/: LinuxInteractive.cpp  flightUtils.cpp  main.cpp  radio.cpp  switch.cpp  utils.cpp
contrib/: DJIConfig.cmake
main/: CMakeLists.txt  LinuxInteractive.h  main.cpp
osdk-wrapper/: CMakeLists.txt
osdk-wrapper/src/: LinuxCamera.cpp
